--- a/DostavkaNaMarket/DostavkaNaMarket.csproj
+++ b/DostavkaNaMarket/DostavkaNaMarket.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="MongoDB.Driver" Version="2.16.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Data\" />
+  </ItemGroup>
+
 </Project>
