--- a/DostavkaNaMarket/DostavkaNaMarket.csproj
+++ b/DostavkaNaMarket/DostavkaNaMarket.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="MongoDB.Driver" Version="2.16.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\js\" />
+  </ItemGroup>
+
 </Project>
